Handle GrabCut aspect issues

--- a/examples/topics/GrabCut.ipynb
+++ b/examples/topics/GrabCut.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_region = SelectRegionPanel(hv.Bounds((-77.5, 34.4, -77.3, 34.8)), magnification=2)\n",
+    "select_region = SelectRegionPanel(hv.Bounds((-77.5, 34.45, -77.3, 34.75)), magnification=1)\n",
     "pn.Row(select_region.param, select_region.view())"
    ]
   },
@@ -59,7 +59,7 @@
     "    [-77.41376085, 34.62573423], [-77.37886112,34.63780581], [-77.41283172, 34.6800562 ],\n",
     "    [-77.46585666, 34.66965009]\n",
     "])\n",
-    "dashboard = GrabCutPanel(select_region.get_tiff(), fg_data=[foreground], bg_data=[background], height=600, width=300)\n",
+    "dashboard = GrabCutPanel(select_region.get_tiff(), fg_data=[foreground], bg_data=[background])\n",
     "pn.Row(dashboard.param, dashboard.view())"
    ]
   },
